# gtk-game-updater

./: .gitignore  CMakeLists.txt  README.md
app/: launcher
app/asset/gtk/: gtk.css
app/config/: launcher  realmlist
app/update/: current
src/: app.cpp  app.h  config.h  main.cpp
src/context/: header.cpp  header.h  patcher.cpp  patcher.h  repair.cpp  repair.h  rescue.cpp  rescue.h  reset.cpp  reset.h  settings.cpp  settings.h  shortcut.cpp  shortcut.h  updater.cpp  updater.h
src/render/: browser.cpp  browser.h  console.cpp  console.h
src/tools/: color.cpp  color.h  config.cpp  config.h  download.cpp  download.h  minitar.cpp  minitar.h  os.cpp  os.h  string.h  thread.cpp  thread.h
